Arreglo de bugs.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
   
       <div class="messages">
         <p>Vidas: <span id="lives"></span></p>
-        <p>Tiempo ⌛: <span id="time"></span></p>
-        <p>Record 🏆: <span id="record"></span></p>
+        <p>Tiempo ⏱️: <span id="time"></span></p>
+        <p>Record 🏁: <span id="record"></span></p>
         <p id="result" class="messages__result"></p>
       </div>
     </div>
